#!/usr/bin/env ts-node
/**
 * Demo: Ajout d'un client dans la base de donnÃ©es via MCP
 *
 * Ce script montre comment:
 * 1. Se connecter au serveur MCP
 * 2. CrÃ©er un nouveau client
 * 3. VÃ©rifier qu'il a Ã©tÃ© ajoutÃ©
 * 4. Le rÃ©cupÃ©rer par son ID
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import { join } from 'path';

async function demo() {
  console.log('\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—');
  console.log('â•‘      DEMO: Ajout d\'un client dans PostgreSQL         â•‘');
  console.log('â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n');

  // 1. Charger le proto et se connecter
  console.log('ğŸ“¡ Connexion au serveur MCP...');
  const PROTO_PATH = join(__dirname, 'proto/mcp.proto');
  const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
    keepCase: true,
    longs: String,
    enums: String,
    defaults: true,
    oneofs: true,
  });

  const protoDescriptor = grpc.loadPackageDefinition(packageDefinition) as any;
  const mcpProto = protoDescriptor.mcp;

  const client = new mcpProto.MCPService(
    'localhost:50052',
    grpc.credentials.createInsecure()
  );

  console.log('âœ… ConnectÃ© au serveur MCP sur localhost:50052\n');

  // 2. CrÃ©er un nouveau client
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log('ğŸ“ CrÃ©ation d\'un nouveau client...\n');

  const now = new Date().toISOString();
  // Utiliser un UUID valide pour le compte (format UUID v4)
  const compteId = '123e4567-e89b-12d3-a456-426614174000';

  const clientData = {
    nom: 'Dupont',
    prenom: 'Jean',
    telephone: '+33612345678',
    typeClient: 'particulier',
    statutId: 'actif',
    compteCode: 'DEMO-001',
    partenaireId: 'partenaire-demo',
    dateCreation: now,
  };

  console.log('DonnÃ©es du client:');
  console.log(`  Nom: ${clientData.prenom} ${clientData.nom}`);
  console.log(`  TÃ©lÃ©phone: ${clientData.telephone}`);
  console.log(`  Type: ${clientData.typeClient}`);
  console.log(`  Statut: ${clientData.statutId}`);
  console.log(`  Code compte: ${clientData.compteCode}`);
  console.log(`  Date crÃ©ation: ${clientData.dateCreation}\n`);

  const createResult = await new Promise<any>((resolve, reject) => {
    client.ExecuteTool(
      {
        tool_name: 'create_client',
        input: JSON.stringify(clientData),
        request_id: 'demo-create-client',
        compte_id: compteId,
      },
      (error: any, response: any) => {
        if (error) {
          reject(error);
        } else if (!response.success) {
          reject(new Error(response.error));
        } else {
          resolve(JSON.parse(response.result));
        }
      }
    );
  });

  console.log('âœ… Client crÃ©Ã© avec succÃ¨s!');
  console.log(`   ID: ${createResult.id}`);
  console.log(`   Nom complet: ${createResult.prenom} ${createResult.nom}`);
  console.log(`   TÃ©lÃ©phone: ${createResult.telephone}\n`);

  // 3. VÃ©rifier qu'il a Ã©tÃ© ajoutÃ© en listant les clients
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log('ğŸ” Recherche de tous les clients...\n');

  const searchResult = await new Promise<any>((resolve, reject) => {
    client.ExecuteTool(
      {
        tool_name: 'search_clients',
        input: JSON.stringify({ limit: 10, offset: 0 }),
        request_id: 'demo-search-clients',
        compte_id: compteId,
      },
      (error: any, response: any) => {
        if (error) {
          reject(error);
        } else if (!response.success) {
          reject(new Error(response.error));
        } else {
          resolve(JSON.parse(response.result));
        }
      }
    );
  });

  console.log(`âœ… TrouvÃ© ${searchResult.total} client(s):\n`);
  searchResult.items.forEach((item: any, index: number) => {
    console.log(`   ${index + 1}. ${item.prenom} ${item.nom} (${item.telephone})`);
    console.log(`      ID: ${item.id}`);
    console.log(`      Statut: ${item.statutId}`);
    console.log(`      Type: ${item.typeClient}\n`);
  });

  // 4. RÃ©cupÃ©rer le client par son ID
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log(`ğŸ” RÃ©cupÃ©ration du client par ID: ${createResult.id}...\n`);

  const getResult = await new Promise<any>((resolve, reject) => {
    client.ExecuteTool(
      {
        tool_name: 'get_client',
        input: JSON.stringify({ id: createResult.id }),
        request_id: 'demo-get-client',
        compte_id: compteId,
      },
      (error: any, response: any) => {
        if (error) {
          reject(error);
        } else if (!response.success) {
          reject(new Error(response.error));
        } else {
          resolve(JSON.parse(response.result));
        }
      }
    );
  });

  console.log('âœ… Client rÃ©cupÃ©rÃ© avec succÃ¨s!');
  console.log('\nDÃ©tails complets:');
  console.log(JSON.stringify(getResult, null, 2));

  // Fermer la connexion
  console.log('\nâ”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”');
  console.log('âœ… Demo terminÃ©e avec succÃ¨s!');
  console.log('â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n');

  // Attendre un peu avant de fermer
  await new Promise(resolve => setTimeout(resolve, 1000));
  process.exit(0);
}

// ExÃ©cuter la demo
demo().catch((error) => {
  console.error('\nâŒ Erreur:', error.message);
  console.error('\nAssurez-vous que:');
  console.error('  1. Le serveur MCP est dÃ©marrÃ© (npm run mcp:start)');
  console.error('  2. PostgreSQL est en cours d\'exÃ©cution');
  console.error('  3. La base de donnÃ©es est configurÃ©e dans .env\n');
  process.exit(1);
});
